--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Teste o seu reflexo</title>
+    <title>Teste seu reflexo</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
