--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Teste seu reflexo</title>
+    <title>Teste o seu reflexo</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -55,14 +55,14 @@
             
             <div class="clickedInButtonRed hide">
                 <button class="RestartWhenClickedInButtonRed"></button>
-                <h1>Clique somente no círculo verde.</h1>
-                <h2>Clique na tela para retomar</h2>
+                <h1>Clique no círculo verde</h1>
+                <h2>Para retomar, clique na tela</h2>
             </div>
 
             <div class="buttonIsRed hide">
                 <button class="RestartRedOpition"></button>
-                <h1>Você clicou no momento errado, aguarde o círculo ficar verde.</h1>
-                <h2>Clique na tela para retomar</h2>
+                <h1>Você clicou no momento errado, aguarde o círculo ficar verde</h1>
+                <h2>Para retomar, clique na tela </h2>
             </div>
 
             <div class="score hide">
@@ -74,7 +74,7 @@
             <div class="averageScreen hide">
                 <p>Média</p>
                 <p id="average"></p>
-                <h2>Clique na tela para volta ao início.</h2>
+                <h2>Clique na tela<br> para volta ao início</h2>
                 <button class="newGame"></button>
             </div>
 
