--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             
             <div class="instruction hide">
-                <h2>Clique na tela para iníciar</h2>
+                <h2>Clique na tela para iniciar</h2>
             </div>
             
             <div class="clickedInButtonRed hide">
