--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="averageScreen hide">
                 <p>Média</p>
                 <p id="average"></p>
-                <h2>Clique na tela<br> para volta ao início</h2>
+                <h2>Clique na tela<br> para volta ao inicio</h2>
                 <button class="newGame"></button>
             </div>
 
