--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Teste o seu reflexo</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="shortcut icon" href="favicon.webp" type="image/x-webp">
 </head>
 <body>
     <header>
