--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Teste o seu reflexo</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="shortcut icon" href="assets/favicon.webp" type="image/x-webp">
     <script src="script.js" defer></script>
-    <link rel="shortcut icon" href="favicon.webp" type="image/x-webp">
 </head>
 <body>
     <header>
