--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </p>
                 <div class="GreenMiniCircle"></div>
             <p>
-                Se clicar no vermelho, aquela rodada será reiniciada e você terá uma nova chance de clicar o mais rápido possível.<br>
+                Se clicar no vermelho, a rodada será reiniciada e você terá uma nova chance de clicar o mais rápido possível.<br>
             </p>
                 <div class="RedMiniCircle"></div>
             <p>
