--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="bgIntroduction">
         <div class="introduction">
-            <h2>Teste seus reflexos</h2>
+            <h2>Teste seu reflexo</h2>
             <p>
                 Você tem três tentativas para fazer o seu melhor tempo, clicando apenas quando o círculo estiver verde.<br>
 
