--- a/index.html
+++ b/index.html
@@ -15,17 +15,7 @@
         <h1>Teste seu reflexo</h1>
     </header>
     <div class="bgIntroduction">
-        <div class="introduction">
-            <h2>Teste seus reflexos</h2>
-            <p>
-                Você tem três tentativas para fazer o seu melhor tempo, clicando apenas quando o círculo estiver verde.<br>
-
-                Quando clicar no círculo verde, será contabilizado quantos milissegundos você demorou para clicar.<br>
-            </p>
-                <div class="GreenMiniCircle"></div>
-            <p>
-                Se clicar no vermelho, aquela rodada será reiniciada e você terá uma nova chance de clicar o mais rápido possível.<br>
-            </p>
+        <div cl
                 <div class="RedMiniCircle"></div>
             <p>
                 No final das três rodadas, sua média aparecerá na tela. <br><br>
