--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
                 Quando clicar no círculo verde, será contabilizado quantos milissegundos você demorou para clicar.<br>
             </p>
-                <div class="GreenMiniCircle"></div>
+                <ion-icon class="GreenMiniCircle" name="ellipse-sharp"></ion-icon>
             <p>
                 Se clicar no vermelho, aquela rodada será reiniciada e você terá uma nova chance de clicar o mais rápido possível.<br>
             </p>
-                <div class="RedMiniCircle"></div>
+            <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
             <p>
                 No final das três rodadas, sua média aparecerá na tela. <br><br>
             </p>
@@ -66,15 +66,15 @@
                     <div id="circleContainer">
                         <div class="oneCircle">
                             <div class='containerminiCircle'>
-                                <div class="miniCircle"></div>
+                                <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
                             </div>
                             <p>Um</p>
                         </div>
                         <div class="threeCircle">
                             <div class='containerminiCircle'>
-                                <div class="miniCircle"></div>
-                                <div class="miniCircle"></div>
-                                <div class="miniCircle"></div>
+                                <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
+                                <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
+                                <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
                             </div>
                             <p>Três</p>
                         </div>
