--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 
                 <div class="colorPalette">
                     <div class="bgColor hide">
-                            <div id="blue" class="color"></div>
-                            <div id="green" class="color"></div>
-                            <div id="red" class="color"></div>
-                            <div id="purple" class="color"></div>
+                        <ion-icon id="blue" name="ellipse-sharp"></ion-icon>
+                        <ion-icon id="green" name="ellipse-sharp"></ion-icon>
+                        <ion-icon id="red" name="ellipse-sharp"></ion-icon>
+                        <ion-icon id="purple" name="ellipse-sharp"></ion-icon>
                     </div>
                     <ion-icon class="palette" name="color-palette-outline"></ion-icon>
                 </div>
