--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </p>
         </div>
     </div>
-
+    <div id="container">
         <header>
             <h1>Teste seu reflexo</h1>
         </header>
@@ -108,9 +108,9 @@
             </div>
 
             <div class="score hide">
-                <p>Pontuação</p>
-                <h1 id="cronometro">0</h1>
-                <h1 id="threeSecondsToStartOver">3</h1>
+                <h1>Pontuação</h1>
+                <h2 id="cronometro">0</h2>
+                <h2 id="threeSecondsToStartOver">3</h2>
             </div>
 
             <div class="averageScreen hide">
@@ -138,6 +138,7 @@
                 </div>
             </div>
         </footer>
+    </div>
     
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
