--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Teste o seu reflexo</title>
+    <link rel="stylesheet" href="style.css">
 
+    <link rel="shortcut icon" href="assets/favicon.webp" type="image/x-webp">
+    <script src="script.js" defer></script>
+
+</head>
+<body>
+    <div class="bgIntroduction">
+        <div class="introduction">
+            <h2>Teste seus reflexos</h2>
+            <p>
                 Você tem três tentativas para fazer o seu melhor tempo, clicando apenas quando o círculo estiver verde.<br>
 
                 Quando clicar no círculo verde, será contabilizado quantos milissegundos você demorou para clicar.<br>
