--- a/index.html
+++ b/index.html
@@ -99,12 +99,13 @@
             <div class="clickedInButtonRed hide">
                 <button class="RestartWhenClickedInButtonRed"></button>
                 <h2>Clique no círculo verde.</h2>
-                <h3>Para retomar, clique na tela</h3>
+                <h3>Clique na tela<br> para retomar o jogo</h3>
+
             </div>
             <div class="buttonIsRed hide">
                 <button class="RestartRedOpition"></button>
                 <h2>Você clicou no momento errado!<br> aguarde o círculo ficar verde.</h2>
-                <h3>Para retomar, clique na tela </h3>
+                <h3>Clique na tela<br> para retomar o jogo</h3>
             </div>
 
             <div class="score hide">
