--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <h2>Seus melhores tempos</h2>
                 <div id="containerAllScore">
                     <div id="containerShowScoreRankingOne">
-                        <h3>Um circulo</h3>
+                        <h2>Um circulo</h2>
                         <p class=" showScoreRankingOne"></p>
                     </div>
                     <div id="containerShowScoreRankingThree">
-                        <h3>Três circulos</h3>
+                        <h2>Três circulos</h2>
                         <p class=" showScoreRankingThree"></p>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                             <div class='containerminiCircle'>
                                 <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
                             </div>
-                            <p>Um</p>
+                            <h2>Um</h2>
                         </div>
                         <div class="threeCircle">
                             <div class='containerminiCircle'>
@@ -76,7 +76,7 @@
                                 <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
                                 <ion-icon class="miniCircle" name="ellipse-sharp"></ion-icon>
                             </div>
-                            <p>Três</p>
+                            <h2>Três</h2>
                         </div>
                     </div>
                 </div>
