--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         <main>
             <div class="rankingOne hide">
                 <ion-icon class="backRankingScreen" name="close-circle-outline"></ion-icon>
-                <h2>Seus melhores tempos</h2>
+                <h1>Seus melhores tempos</h1>
                 <div id="containerAllScore">
                     <div id="containerShowScoreRankingOne">
-                        <h2>Um circulo</h2>
-                        <p class=" showScoreRankingOne"></p>
+                        <h2>Um <br> circulo</h2>
+                        <h3 class=" showScoreRankingOne"></h3>
                     </div>
                     <div id="containerShowScoreRankingThree">
-                        <h2>Três circulos</h2>
-                        <p class=" showScoreRankingThree"></p>
+                        <h2>Três <br>  circulos</h2>
+                        <h3 class=" showScoreRankingThree"></h3>
                     </div>
                 </div>
 
